--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<title>:: Animate ::</title>
 </head>
 <body>
-	Hola Node.js
+	<div id="video-preview"></div>
+	<button id="record">Record</button>
+	<script src="/app.js"></script>
 </body>
 </html>
